--- a/app/Blueprints/site/templates/admin/student/about.html
+++ b/app/Blueprints/site/templates/admin/student/about.html
@@ -118,7 +118,7 @@ window.onload = function () {
 				})
 
   			x.domain(d.map(function(d) { return d.test; }));
-  			y.domain([0, 9]);
+  			y.domain([0, {{maxMarks}}]);
 
   			g.append("g")
       			.attr("class", "axis axis--x")
@@ -206,7 +206,7 @@ window.onload = function () {
 
 
   			x.domain(d.map(function(d) { return d.name; }));
-  			y.domain([0, 9]);
+  			y.domain([0, {{maxMarks}}]);
 
   			g.append("g")
       			.attr("class", "axis axis--x")
