--- a/app/Blueprints/site/templates/admin/student/student_registration.html
+++ b/app/Blueprints/site/templates/admin/student/student_registration.html
@@ -24,11 +24,11 @@
           <input type="text" id="datepicker" name="DOB" placeholder="Date of Birth"/><br>
           <input type="text" name="RFID" placeholder="RFID Number" /><br>
           <input type="text" name="source" placeholder="Source" /><br>
-          <input type="text" name="grade10" placeholder="marks in grade 10" />
-          <input type="text" name="grade12" placeholder="marks in grade 12" />
-          <input type="text" name="graduate" placeholder="marks in graduate" />
-          <input type="text" name="PG" placeholder="marks in post graduate" />
-          <input type="text" name="NOB" placeholder="no of backlog" />
+          <input type="text" name="grade10" placeholder="marks in grade 10" /><br>
+          <input type="text" name="grade12" placeholder="marks in grade 12" /><br>
+          <input type="text" name="graduate" placeholder="marks in graduate" /><br>
+          <input type="text" name="PG" placeholder="marks in post graduate" /><br>
+          <input type="text" name="NOB" placeholder="no of backlog" /><br>
           <p>select batch</p>
           <select name="batch">
               {% for batch in batches %}
