--- a/app/Blueprints/site/templates/admin/dashboard.html
+++ b/app/Blueprints/site/templates/admin/dashboard.html
@@ -1,62 +1,8 @@
-<!-- {% extends 'admin/master.html' %}
+{% extends 'admin/master.html' %}
 {% block body %}
-
-  <div class="AdminDashboard">
-
-    <div class="Title">
-      <h3><i class="fas fa-chevron-right"></i>Dashboard</h3>
+    <div class="BatchesAbout">
+		<b>last punched : {{lastcard}}</b>
     </div>
-    <br><br>
-
-    <div class="Board">
-			<p>{{lastcard}}</p>
-    </div>
-  </div>
-
-{% endblock %} -->
+{% endblock %}
 
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <title>Admin Dashboard : CafeLingua</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="viewport" content="maximum-scale=1, width=1080">
-    <link rel="shortcut icon" href="assets/img/icon.png">
-    <link rel="stylesheet" href="assets/scss/admin.min.css">
-</head>
-<body>
-  <div class="AdminDashboard">
-    <div class="CafeColor tab"></div>
-    <div class="MenuPanel tab">
-      <img src="assets/img/logox500.png" alt="logo">
-      <div class="Menu">
-        <a href="#"><i class="fas fa-clipboard"></i><p>Dashboard</p></a>
-        <a href="#"><i class="fas fa-user"></i><p>Student</p></a>
-        <a href="#"><i class="fas fa-users"></i><p>Batches</p></a>
-        <a href="#"><i class="fas fa-bookmark"></i><p>Modules</p></a>
-        <a href="#"><i class="fas fa-book-open"></i><p>Courses</p></a>
-        <a href="#"><i class="fas fa-file-alt"></i><p>Tests</p></a>
-      </div>
-      <div class="LogoutButton">
-        <a href="#"><i class="fas fa-sign-out-alt"></i></a>
-      </div>
-    </div>
-  </div>
-
-  	<p>{{lastcard}}</p>
-
-<!--
-<h1>Welcome {{usr.first_name}}</h1>
-
-<ul>
-    <li><a href="/student">student</a></li>
-    <li><a href="/module">modules</a></li>
-    <li><a href="/course">courses</a></li>
-    <li><a href="/batch">batches</a></li>
-    <li><a href="/test">tests</a></li>
-    <li><a href="#">logout</a></li>
-</ul>
- -->
-</body>
-</html>
