--- a/app/Blueprints/site/templates/admin/student/about.html
+++ b/app/Blueprints/site/templates/admin/student/about.html
@@ -57,13 +57,17 @@
 				<td><p>{{student.NOB}}</p></td>
 			</tr>
 			<tr>
-				<th><p>Target Contry:</p></th>
+				<th><p>Target Country:</p></th>
 				<td><p>{{student.country}}</p></td>
 			</tr>
 			<!-- <tr>
 				<th>Picture</th>
 				<td><img src={{ url_for("static", filename=student.picture) }}></td>
 			</tr> -->
+			<tr>
+				<th><p>Attendance this month</p></th>
+				<th><p>{{attendance}}</p></th>
+			</tr>
 		</table>
 		<br><br>
 		<div>
