--- a/app/Blueprints/site/static/scss/admin.scss
+++ b/app/Blueprints/site/static/scss/admin.scss
@@ -141,7 +141,7 @@ $top-Height:50px;
   }
 
   .MenuPanel{
-    position: fixed;
+    position: absolute;
     z-index: 5;
     width: 350px;
     margin: $top-Height 0 $top-Height 70px;
@@ -202,17 +202,17 @@ $top-Height:50px;
 
     .LogoutButton{
       width: 100%;
-      height: 90px;
-      margin: 25% auto 0 auto;
+      height: auto;
+      margin: 10% auto 10% auto;
       text-align: center;
       a{
         border-radius: 5px;
         border: 2px solid $coffee-color;
-        padding: 40px 20px 20px 25px;
+        padding: 15px 10px 10px 15px;
         transition: all 0.2s;
 
         i{
-          font-size: 40px;
+          font-size: 20px;
           color: $coffee-color;
         }
 
