--- a/app/Blueprints/site/templates/admin/master.html
+++ b/app/Blueprints/site/templates/admin/master.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="utf-8">
         <title>CafeLingua Admin</title>
-        <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
-        <meta name="viewport" content="width=1080, initial-scale=1">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <!-- <meta name="viewport" content="width=1000, initial-scale=1"> -->
         <link rel="shortcut icon" href="{{url_for("static", filename = "img/icon.png")}}" />
         <link rel="stylesheet" href="{{url_for("static", filename = "scss/admin.min.css")}}" />
 		    <link rel="stylesheet" href="{{url_for("static", filename = "css/css_for_charts.css")}}" />
@@ -25,7 +25,7 @@
             <div class="Menu">
               <p class="UName">{{username}}</p>
               <hr>
-              <a href="/admin/dashboard"><i class="fas fa-clipboard"></i><p>Dashboard</p></a>
+              <!-- <a href="/admin/dashboard"><i class="fas fa-clipboard"></i><p>Dashboard</p></a> -->
               <a href="/student"><i class="fas fa-user"></i><p>Student</p></a>
               <a href="/batch"><i class="fas fa-users"></i><p>Batches</p></a>
               <a href="/module"><i class="fas fa-bookmark"></i><p>Modules</p></a>
@@ -35,6 +35,9 @@
             <div class="LogoutButton">
               <a href="/logout"><i class="fas fa-sign-out-alt"></i></a>
             </div>
+            <div align="center">
+              <b>{{lastcard}}</b>
+            </div><br>
           </div>
         </div>
 		<div>
