--- a/app/Blueprints/site/templates/admin/batch/update.html
+++ b/app/Blueprints/site/templates/admin/batch/update.html
@@ -3,43 +3,39 @@
   <div class="CreateBatch">
 
     <div class="Title">
-      <h3><i class="fas fa-chevron-right"></i>Create Batche</h3>
+      <h3><i class="fas fa-chevron-right"></i>Create Batch</h3>
       <br><br>
       <div class="Board">
         <span class="button"><a href="/batch/new"><i class="fas fa-plus-circle"></i><p>Add Batch</p></a></span>
         <span class="button"><a href="/batch"><i class="fas fa-user-friends"></i><p>Browse Batches</p></a></span>
         <br><br><br>
 
-        <p class="sub1"><i class="fas fa-chevron-right"></i>Create New Batch</p>
+        <p class="sub1"><i class="fas fa-chevron-right"></i>update batch : {{batch.name}}</p>
         <br><br>
 
         <div class="BatchForm">
           <form class="" action="" method="post">
-            <input type="text" name="name" placeholder="Name" /><br>
-            <input type="text" name="time" id="timepicker" placeholder="Select Time" /><br>
-            <input type="text" name="duration" placeholder="Duration (Minutes)" /><br>
+             {{msg}}<br>
+            <input type="text" value={{batch.name}} name="name" placeholder="Name" /><br>
+            <input type="text" value={{batch.start_time}} name="time" id="timepicker" placeholder="Select Time" /><br>
+            <input type="text" value={{batch.duration}} name="duration" placeholder="Duration (Minutes)" /><br>
             <br>
             <p style="font-size:18px;" class="sub1"><i class="fas fa-caret-right"></i>Select Days</p>
             <br>
-            <label><input type="checkbox" name="dayList[]" value="0"><span class="checkmark"></span> Monday</label><br>
-            <label><input type="checkbox" name="dayList[]" value="1"><span class="checkmark"></span> Tuesday</label><br>
-            <label><input type="checkbox" name="dayList[]" value="2"><span class="checkmark"></span> Wednesday</label><br>
-            <label><input type="checkbox" name="dayList[]" value="3"><span class="checkmark"></span> Thursday</label><br>
-            <label><input type="checkbox" name="dayList[]" value="4"><span class="checkmark"></span> Friday</label><br>
-            <label><input type="checkbox" name="dayList[]" value="5"><span class="checkmark"></span> Saturday</label><br>
-            <label><input type="checkbox" name="dayList[]" value="6"><span class="checkmark"></span> Sunday</label>
+            <label><input type="checkbox" {% if batch.day_byte[0] == '1' %} checked {% endif %} name="dayList[]" value="0"><span class="checkmark"></span> Monday</label><br>
+            <label><input type="checkbox" {% if batch.day_byte[1] == '1' %} checked {% endif %} name="dayList[]" value="1"><span class="checkmark"></span> Tuesday</label><br>
+            <label><input type="checkbox" {% if batch.day_byte[2] == '1' %} checked {% endif %} name="dayList[]" value="2"><span class="checkmark"></span> Wednesday</label><br>
+            <label><input type="checkbox" {% if batch.day_byte[3] == '1' %} checked {% endif %} name="dayList[]" value="3"><span class="checkmark"></span> Thursday</label><br>
+            <label><input type="checkbox" {% if batch.day_byte[4] == '1' %} checked {% endif %} name="dayList[]" value="4"><span class="checkmark"></span> Friday</label><br>
+            <label><input type="checkbox" {% if batch.day_byte[5] == '1' %} checked {% endif %} name="dayList[]" value="5"><span class="checkmark"></span> Saturday</label><br>
+            <label><input type="checkbox" {% if batch.day_byte[6] == '1' %} checked {% endif %} name="dayList[]" value="6"><span class="checkmark"></span> Sunday</label>
             <br>
             <p style="font-size:18px;" class="sub1"><i class="fas fa-caret-right"></i>Select course</p>
             <br>
             {% for course in courses %}
-                <label><input type="radio" name="course" value="0"><span class="checkmark"></span> {{course.name}}</label><br>
+                <label><input type="radio" {% if course in batch.courses %} checked {% endif %}  name="course" value="{{course.id}}"><span class="checkmark"></span> {{course.name}}</label><br>
             {% endfor %}
             <br>
-            <p style="font-size:18px;" class="sub1"><i class="fas fa-caret-right"></i>Select Students</p>
-            <br>
-            {% for student in students %}
-            <label><input type="checkbox" name="course" value="0"><span class="checkmark"></span> {{student.fname}} {{student.lname}}</label><br>
-            {% endfor %}
             <button><i class="fas fa-plus-circle"></i>Add</button>
           </form>
         </div>
@@ -49,7 +45,7 @@
 
   <script>
           $("#timepicker").timepicker({
-              timeFormat : 'H:m:s',
+              timeFormat : 'HH:mm:ss',
           })
   </script>
 {% endblock %}
